--- a/admin_star/templates/admin/index.html
+++ b/admin_star/templates/admin/index.html
@@ -10,11 +10,11 @@
 
 {% endblock extrastyle %}
 
-{% comment %} {% block pro_banner %}
+{% block pro_banner %}
 
   {% include 'includes/pro-banner.html' %}
 
-{% endblock pro_banner %} {% endcomment %}
+{% endblock pro_banner %}
 
 {% block content %}
       <!-- partial -->
