--- a/admin_star/templates/layouts/base.html
+++ b/admin_star/templates/layouts/base.html
@@ -9,7 +9,7 @@
   <title>Star Admin2 </title>
 
   {% include 'includes/styles.html' %}
-  {% block extra_style %}{% endblock extra_style %}
+  {% block extrastyle %}{% endblock extrastyle %}
 </head>
 <body>
   <div class="container-scroller">
