--- a/admin_star/templates/pages/forms/basic_elements.html
+++ b/admin_star/templates/pages/forms/basic_elements.html
@@ -1,14 +1,14 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block extra_style %}
+{% block extrastyle %}
 
   <!-- Plugin css for this page -->
   <link rel="stylesheet" href="{% static 'vendors/select2/select2.min.css' %}">
   <link rel="stylesheet" href="{% static 'vendors/select2-bootstrap-theme/select2-bootstrap.min.css' %}">
   <!-- End plugin css for this page -->
 
-{% endblock extra_style %}
+{% endblock extrastyle %}
 
 {% block content %}
   <div class="main-panel">        
