--- a/admin_star/templates/pages/icons/mdi.html
+++ b/admin_star/templates/pages/icons/mdi.html
@@ -1,13 +1,13 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block extra_style %}
+{% block extrastyle %}
 
   <!-- Plugin css for this page -->
   <link rel="stylesheet" href="../../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
   <link rel="stylesheet" href="../../js/select.dataTables.min.css">
 
-{% endblock extra_style %}
+{% endblock extrastyle %}
 
 {% block content %}
     <div class="main-panel">        
