--- a/admin_star/templates/includes/sidebar.html
+++ b/admin_star/templates/includes/sidebar.html
@@ -1,14 +1,54 @@
-{% load static %}
+{% load i18n static admin_star %}
 
 <!-- partial:partials/_sidebar.html -->
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item {% if 'dashboard' in parent %} active {% endif %}">
+      {% if request.user.is_superuser %}
+      <a class="nav-link" href="{% url 'admin:index' %}">
+      {% else %}
       <a class="nav-link" href="/">
+      {% endif %}
         <i class="mdi mdi-grid-large menu-icon"></i>
         <span class="menu-title">Dashboard</span>
       </a>
     </li>
+
+    {% admin_get_menu as app_list %}
+    {% if app_list %}
+      {% for app in app_list %}
+        {% if app.has_perms and not app.pinned %}
+        <li class="nav-item {% if 'dashboard' in segment %} active {% endif %}">
+          <a class="nav-link" data-bs-toggle="collapse" href="#submenu-{{ app.app_label }}" aria-expanded="false" aria-controls="submenu-{{ app.app_label }}">
+            <i class="menu-icon mdi {{ app.icon }}"></i>
+            <span class="menu-title">{{ app.label|slice:10 }}{% if app.label|length > 10 %}..{% endif %}</span>
+            <i class="menu-arrow"></i> 
+          </a>
+
+          <div class="collapse {% if 'ui-elements' in parent %} show {% endif %}" id="submenu-{{ app.app_label }}">
+            {% if app.models %}
+            <ul class="nav flex-column sub-menu">
+              {% for model in app.models %}
+              {% if model.url %}
+              <li class="nav-item">
+                <a class="nav-link {% if 'bootstrap-tables' in segment or model.url in request.path|urlencode %} active {% endif %}"
+                  href="{{ model.url }}">
+                  <p>{{ model.label }}</p>
+                </a>
+              </li>
+              {% else %}
+              <li class="nav-item">{{ model.label }}</li>
+              {% endif %}
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+        </li>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+
+    {% if request.user.is_authenticated and not request.user.is_superuser %}
     <li class="nav-item nav-category">UI Elements</li>
     <li class="nav-item {% if 'ui-elements' in parent %} active {% endif %}">
       <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
@@ -73,6 +113,7 @@
         </ul>
       </div>
     </li>
+    {% endif %}
     <li class="nav-item nav-category">pages</li>
     <li class="nav-item">
       <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
@@ -82,7 +123,18 @@
       </a>
       <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="{% url 'login' %}"> Login </a></li>
+          {% if request.user.is_superuser %}
+          <li class="nav-item"> <a class="nav-link" href="{% url 'admin:password_change' %}"> Change Password </a></li>
+          <li class="nav-item"> <a class="nav-link" href="{% url 'admin:logout' %}"> Logout </a></li>
+          {% else %}
+            {% if request.user.is_authenticated %}
+            <li class="nav-item"> <a class="nav-link" href="{% url 'password_change' %}"> Change Password </a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'logout' %}"> Logout </a></li>
+            {% else %}
+            <li class="nav-item"> <a class="nav-link" href="{% url 'login' %}"> Login </a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'register' %}"> Register </a></li>
+            {% endif %}
+          {% endif %}
         </ul>
       </div>
     </li>
