--- a/admin_star/templates/includes/styles.html
+++ b/admin_star/templates/includes/styles.html
@@ -12,4 +12,4 @@
 <!-- inject:css -->
 <link rel="stylesheet" href="{% static 'css/vertical-layout-light/style.css' %}">
 <!-- endinject -->
-<link rel="shortcut icon" href="images/favicon.png" />
+<link rel="shortcut icon" href="{% static 'images/favicon.png' %}" />
