--- a/admin_star/templates/includes/navigation.html
+++ b/admin_star/templates/includes/navigation.html
@@ -9,10 +9,10 @@
       </button>
     </div>
     <div>
-      <a class="navbar-brand brand-logo" href="index.html">
+      <a class="navbar-brand brand-logo" href="/">
         <img src="{% static 'images/logo.svg' %}" alt="logo" />
       </a>
-      <a class="navbar-brand brand-logo-mini" href="index.html">
+      <a class="navbar-brand brand-logo-mini" href="/">
         <img src="{% static 'images/logo-mini.svg' %}" alt="logo" />
       </a>
     </div>
@@ -163,7 +163,13 @@
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Messages</a>
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Activity</a>
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
-          <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
+          {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="dropdown-item">
+              <i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
+          {% else %}
+            <a href="{% url 'login' %}" class="dropdown-item">
+              <i class="dropdown-item-icon mdi mdi-login text-primary me-2"></i>Sign IN</a>
+          {% endif %}
         </div>
       </li>
     </ul>
