--- a/admin_star/templates/includes/sidebar.html
+++ b/admin_star/templates/includes/sidebar.html
@@ -140,10 +140,20 @@
     </li>
     <li class="nav-item nav-category">help</li>
     <li class="nav-item">
-      <a class="nav-link" href="http://bootstrapdash.com/demo/star-admin2-free/docs/documentation.html">
+      <a class="nav-link"
+         target="_blank" 
+         href="https://github.com/app-generator/django-star-admin">
         <i class="menu-icon mdi mdi-file-document"></i>
         <span class="menu-title">Documentation</span>
       </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link"
+         target="_blank" 
+         href="https://appseed.us/support/">
+        <i class="menu-icon mdi mdi-rocket text-danger"></i>
+        <span class="menu-title text-danger fw-bold">Support</span>
+      </a>
+    </li>    
   </ul>
 </nav>
